--- a/trms/connection.properties
+++ b/trms/connection.properties
@@ -1,3 +1,3 @@
-url=jdbc:oracle:thin:@mydbinstance.cnao0rahwpz0.us-east-2.rds.amazonaws.com:1521:Oracle
+url=jdbc:oracle:thin:@mydbinstance.cnao0rahwpz0.us-east-2.rds.amazonaws.com:1521:ORCL
 user=trms_user
 password=trmsp4ssw0rd
