--- a/trms/src/main/webapp/WEB-INF/web.xml
+++ b/trms/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,12 @@
   	<description></description>
   	<servlet-class>com.revature.controllers.CreateServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>ChangeServlet</servlet-name>
+  	<display-name>ChangeServlet</display-name>
+  	<description></description>
+  	<servlet-class>com.revature.controllers.ChangeServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>LoginServlet</servlet-name>
   	<url-pattern>/login</url-pattern>
@@ -53,6 +59,10 @@
   <servlet-mapping>
   	<servlet-name>CreateServlet</servlet-name>
   	<url-pattern>/create</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ChangeServlet</servlet-name>
+  	<url-pattern>/change</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
